# snapd-extra-utils

debian/: changelog  control  copyright  rules  snapd-installation-monitor.install  snapd-seed-glue.install
debian/tests/: control  snapd-seed-glue
snapd-installation-monitor/: CMakeLists.txt  main.cpp  snapd-installation-monitor.desktop
snapd-installation-monitor/.qt/: QtDeploySupport.cmake
snapd-seed-glue/: assertions.go  cleanup.go  download.go  go.mod  go.sum  main.go  process.go  progress.go  seed.go  utils.go  validation.go
snapd-seed-glue/tests/: CMakeLists.txt  cli-tests.cpp
